完成TS基础入门笔记

--- a/_config.aurora.yml
+++ b/_config.aurora.yml
@@ -16,8 +16,8 @@ site:
   link: "/"
   language: cn
   multi_language: true
-  logo: https://img-blog.csdnimg.cn/20210313122054101.png
-  avatar: https://gitee.com/LUNIONT/img-url/raw/master/202201011746808.jpg
+  logo: https://p26-passport.byteacctimg.com/img/user-avatar/c52fbf24fbba8a052c8dd93e8b978eac~300x300.image
+  avatar: https://p26-passport.byteacctimg.com/img/user-avatar/c52fbf24fbba8a052c8dd93e8b978eac~300x300.image
   beian:
     number: "蜀ICP备2022001571号"
     link: "http://beian.miit.gov.cn/"
